[package]
name = "minijam92"
version = "0.1.0"
authors = [""]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
agb = { path = "../agb/agb", version = "0.8.0", features = ["freq18157"]}

[build-dependencies]
quote = "1.0.10"
tiled = "0.9.5"

[profile.dev]
opt-level = 2

[profile.release]
panic = "abort"
lto = true